fix spacing for update form

--- a/price_scrapper_front/src/components/Profile/Profile.css
+++ b/price_scrapper_front/src/components/Profile/Profile.css
@@ -66,6 +66,10 @@ form ul li label {
     float: left;
 }
 
+#update {
+    margin-right: 32px;
+}
+
 .textField {
     float: right;
 }
